--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ mediapipe/provisioning_profile.mobileprovision
 node_modules/
 .configure.bazelrc
 .user.bazelrc
+.aider*
+.vscode/settings.json
+mediapipe/java/com/google/mediapipe/.DS_Store
